<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FileDownLoaderActivity"
    android:id="@+id/focus_parent"
    android:focusableInTouchMode="true">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_weight="0"
        android:text="@string/gallery_select"
        android:id="@+id/gallery" />
    <TextView
        app:layout_constraintTop_toBottomOf="@+id/gallery"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:layout_weight="0"
        android:text="@string/please_url" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        android:minWidth="32dp"
        android:minHeight="48dp"
        tools:ignore="Autofill,LabelFor,NestedWeights,SpeakableTextPresentCheck,TextFields"
        android:id="@+id/url_edit_text"
        android:ellipsize="start"
        android:inputType="textMultiLine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/url_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        android:layout_gravity="center"
        android:id="@+id/download_start"
        android:text="@string/download_start" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/download_start"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        android:layout_weight="10">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toBottomOf="@+id/download_start"
        app:layout_constraintBottom_toTopOf="@+id/clear"/>

        <ProgressBar
            android:id="@+id/progressbar"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintVertical_bias="0.05" />
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/download_still"
        android:id="@+id/clear"
        android:layout_weight="0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/download_still"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/clear"
        android:text="@string/download_exist" />

</androidx.constraintlayout.widget.ConstraintLayout>